--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "json-server": "^0.16.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "scripts": {
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "start": "json-server --watch user.json --port 1314"
   }
 }
