--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Try to make jwt authenticate, socket.io and other mock data",
   "main": "server.js",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
