--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "mock-server",
   "version": "1.0.0",
-  "description": "Try to make jwt authenticate, socket.io and other mock data",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon ./bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.3",
-    "jsonwebtoken": "^8.5.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  },
-  "scripts": {
-    "server": "nodemon server.js",
-    "start": "json-server --watch user.json --port 1314"
   }
 }
